# anti-cursor

./: README.md  pyproject.toml
src/: cli.py  project_parser.py  prompt_generator.py
